--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./resources/qgis2web.css">
     <style>
         html, body {
-            background-color: #ffffff;
+            background-color: #5f8acf;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -21,7 +21,7 @@
             margin: 0;
         }
         header {
-            background-color: #f8f8f8;
+            background-color: #437ad1;
             width: 100%;
             padding: 10px;
             text-align: center;
@@ -56,7 +56,7 @@
 </head>
 <body>
     <header>
-        <h1>Map Viewer</h1>
+        <h1>Lahan Erosi Kota Surakarta</h1>
     </header>
     <div id="map">
         <div id="popup" class="ol-popup">
