--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <body>
     <header>
         <h1>Lahan Erosi Kota Surakarta</h1>
+        <h2>Remdial Sistem Informasi Perencanaan</h1>
     </header>
     <div id="map">
         <div id="popup" class="ol-popup">
