--- a/index.html
+++ b/index.html
@@ -51,50 +51,12 @@
             border: 2px solid #444444;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
-        .ol-popup {
-            position: absolute;
-            background-color: white;
-            box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-            padding: 15px;
-            border-radius: 10px;
-            border: 1px solid #cccccc;
-            bottom: 12px;
-            left: -50px;
-            min-width: 280px;
-        }
-        .ol-popup:after, .ol-popup:before {
-            top: 100%;
-            border: solid transparent;
-            content: " ";
-            height: 0;
-            width: 0;
-            position: absolute;
-            pointer-events: none;
-        }
-        .ol-popup:after {
-            border-top-color: white;
-            border-width: 10px;
-            left: 48px;
-            margin-left: -10px;
-        }
-        .ol-popup:before {
-            border-top-color: #cccccc;
-            border-width: 11px;
-            left: 48px;
-            margin-left: -11px;
-        }
-        .ol-popup-closer {
-            text-decoration: none;
-            position: absolute;
-            top: 2px;
-            right: 8px;
-        }
     </style>
-    <title>Lahan Erosi Kota Surakarta</title>
+    <title>Analisis Kerentanan Kota Surakarta</title>
 </head>
 <body>
     <header>
-        <h1>Lahan Erosi Kota Surakarta</h1>
+        <h1>Analisis Kerentanan Kota Surakarta</h1>
     </header>
     <div id="map">
         <div id="popup" class="ol-popup">
@@ -112,43 +74,5 @@
     <script src="./layers/layers.js" type="text/javascript"></script> 
     <script src="./resources/Autolinker.min.js"></script>
     <script src="./resources/qgis2web.js"></script>
-    <script>
-        // Create a map
-        var map = new ol.Map({
-            target: 'map',
-            layers: layersList,
-            view: new ol.View({
-                center: ol.proj.fromLonLat([0, 0]),
-                zoom: 2
-            })
-        });
-
-        var container = document.getElementById('popup');
-        var content = document.getElementById('popup-content');
-        var closer = document.getElementById('popup-closer');
-
-        var overlay = new ol.Overlay({
-            element: container,
-            autoPan: true,
-            autoPanAnimation: {
-                duration: 250
-            }
-        });
-        map.addOverlay(overlay);
-
-        closer.onclick = function() {
-            overlay.setPosition(undefined);
-            closer.blur();
-            return false;
-        };
-
-        map.on('singleclick', function(evt) {
-            var coordinate = evt.coordinate;
-            var hdms = ol.coordinate.toStringHDMS(ol.proj.toLonLat(coordinate));
-
-            content.innerHTML = '<p>You clicked here:</p><code>' + hdms + '</code>';
-            overlay.setPosition(coordinate);
-        });
-    </script>
 </body>
 </html>
