--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./resources/qgis2web.css">
     <style>
         html, body {
-            background-color: #ffffff;
+            background-color: #a3b3cc;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -21,7 +21,7 @@
             margin: 0;
         }
         header {
-            background-color: #f8f8f8;
+            background-color: #a3b3cc;
             width: 100%;
             padding: 10px;
             text-align: center;
