--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./resources/qgis2web.css">
     <style>
         html, body {
-            background-color: #a3b3cc;
+            background-color: #ffffff;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -21,7 +21,7 @@
             margin: 0;
         }
         header {
-            background-color: #a3b3cc;
+            background-color: #f8f8f8;
             width: 100%;
             padding: 10px;
             text-align: center;
@@ -59,7 +59,6 @@
             height: 579px;
             border: 2px solid #444444;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            margin-bottom: 20px;
         }
         .ol-popup {
             position: absolute;
@@ -100,11 +99,11 @@
             right: 8px;
         }
     </style>
-    <title>Analisis Kerentanan Kota Surakarta</title>
+    <title>Map Viewer</title>
 </head>
 <body>
     <header>
-        <h1>Analisis Kerentanan Kota Surakarta</h1>
+        <h1>Map Viewer</h1>
     </header>
     <div id="map">
         <div id="popup" class="ol-popup">
@@ -113,7 +112,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2024 Analisis Kerentanan Kota Surakarta. All rights reserved.
+        &copy; 2024 Sistem Informasi Perencanaan. Khalishah Najla Rigitia.
     </footer>
     <script src="resources/qgis2web_expressions.js"></script>
     <script src="resources/polyfills.js"></script>
