--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <body>
     <header>
         <h1>Peta Tingkat Erosi Kota Surakarta</h1>
+        <p>Tolong beri nilai yang bagus, saya sudah berusaha</p>
     </header>
     <div id="map">
         <div id="popup" class="ol-popup">
